# ev-charging-scheduler

./: CMakeLists.txt  LICENSE  charging_optimization.cpp
files/: optimization_results.json
